# algorithms

./: LICENSE  README.md
src/: .gitignore  CMakeLists.txt
src/search/: CMakeLists.txt  linear.h
src/tests/: CMakeLists.txt  main.cpp
src/tests/search/: CMakeLists.txt  linear.cpp
